fix alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1121,8 +1121,9 @@ ul {
     display: block;
   }
   .fab{
-    margin-left: 42px;
+    margin-left: 22px;
   }
+  
 }
 
 
